# abraka-dapra

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  docker-e2e.yaml
components/: README.md  ollama.yaml  ollama.yaml.disabled  pubsub.yaml  secretstore.yaml  statestore.yaml  zipkin.yaml
components/docker/: ollama.yaml  pubsub.yaml  statestore.yaml  zipkin.yaml
configs/: snacktopus.json
docs/: CODEX_INSTRUCTIONS.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_SETUP.md  LOCAL_AGENT_WORKFLOW.md  OPERATION_SNACKTOPUS_SPEC.md  OPERATION_SNACKTOPUS_TESTPLAN.md  OPERATION_SNACKTOPUS_WORKFLOW.md  operations.md
manifests/: dapr.yaml
manifests/apps/: agent-shell.yaml  workflow-host.yaml
prompts/: README.md
scripts/: init-ollama.sh  quick-start-docker.sh  seed_memory.py  send_event.py  smoke.py
secrets/: README.md
src/agent_shell/: __init__.py  main.py
src/agent_shell/clients/: __init__.py
src/agent_shell/models/: __init__.py
src/agent_shell/routers/: __init__.py
src/agent_shell/services/: __init__.py
src/shared/: __init__.py  logging.py  settings.py  telemetry.py
src/workflow_host/: __init__.py  main.py
src/workflow_host/activities/: __init__.py
src/workflow_host/clients/: __init__.py
src/workflow_host/models/: __init__.py
tests/: conftest.py  e2e_docker_test.py
tests/integration/: test_compensations.py  test_docker_setup.py  test_happy_path.py
tests/load/: locustfile.py
tests/workflow/: test_snacktopus.py
(+1 files in other folders)
