[project]
name = "abraka-dapra"
version = "0.1.0"
requires-python = ">=3.13.7"
dependencies = [
    "dapr>=1.16.0",
    "dapr-agents>=0.9.1",
    "dapr-ext-workflow>=1.16.0",
    "fastapi>=0.117.1",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "uvicorn[standard]>=0.36.0",
]

[dependency-groups]
dev = [
    "locust>=2.40.5",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "rich>=13.9.4",
    "ruff>=0.13.1",
    "typer>=0.19.1",
]
